[project]
name = "personal-ai-journalist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "fastapi>=0.128.0",
    "langchain>=1.2.8",
    "langchain-groq>=1.1.2",
    "streamlit>=1.53.1",
]
