[project]
name = "personal-ai-journalist"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiolimiter>=1.2.1",
    "beautifulsoup4>=4.14.3",
    "dotenv>=0.9.9",
    "elevenlabs>=2.34.0",
    "fastapi>=0.128.0",
    "groq>=0.37.1",
    "gtts>=2.5.4",
    "langchain>=1.2.8",
    "langchain-groq>=1.1.2",
    "langchain-mcp-adapters>=0.2.1",
    "langgraph>=1.0.7",
    "lxml>=6.0.2",
    "mcp>=1.26.0",
    "streamlit>=1.53.1",
]
